Closed Bug 1439302 Opened 6 years ago Closed 6 years ago

Intermittent Assertion failure: rec->mResolving, at /builds/worker/workspace/build/src/netwerk/dns/nsHostResolver.cpp:1495 with application crashed [@ nsHostResolver::CompleteLookup]

Categories

(Core :: Networking: DNS, defect, P1)

defect

Tracking

()

RESOLVED FIXED
mozilla60
Tracking Status
firefox-esr52 --- unaffected
firefox58 --- unaffected
firefox59 --- unaffected
firefox60 --- fixed

People

(Reporter: intermittent-bug-filer, Assigned: bagder)

References

Details

(Keywords: assertion, crash, intermittent-failure, Whiteboard: [necko-triaged][trr])

Crash Data

Attachments

(1 file)

Filed by: ncsoregi [at] mozilla.com

https://treeherder.mozilla.org/logviewer.html#?job_id=162954805&repo=autoland

https://queue.taskcluster.net/v1/task/TTfiJzVVQYGeqw3YNdK1sw/runs/0/artifacts/public/logs/live_backing.log

[task 2018-02-19T04:12:02.633Z] 04:12:02     INFO -  Assertion failure: rec->mResolving, at /builds/worker/workspace/build/src/netwerk/dns/nsHostResolver.cpp:1495
[task 2018-02-19T04:12:02.634Z] 04:12:02     INFO -  #01: ???[/builds/worker/workspace/build/application/firefox/libxul.so +0x7392a1]
[task 2018-02-19T04:12:02.634Z] 04:12:02     INFO -  #02: ???[/builds/worker/workspace/build/application/firefox/libxul.so +0x7388de]
[task 2018-02-19T04:12:02.635Z] 04:12:02     INFO -  #03: ???[/builds/worker/workspace/build/application/firefox/libnspr4.so +0x24fb0]
[task 2018-02-19T04:12:02.635Z] 04:12:02     INFO -  #04: ???[/lib/i386-linux-gnu/libpthread.so.0 +0x6295]
[task 2018-02-19T04:12:02.636Z] 04:12:02     INFO -  ExceptionHandler::GenerateDump cloned child 4096
[task 2018-02-19T04:12:02.637Z] 04:12:02     INFO -  ExceptionHandler::SendContinueSignalToChild sent continue signal to child
[task 2018-02-19T04:12:02.637Z] 04:12:02     INFO -  ExceptionHandler::WaitForContinueSignal waiting for continue signal...
[task 2018-02-19T04:12:02.864Z] 04:12:02     INFO -  [GFX1-]: Receive IPC close with reason=AbnormalShutdown
[task 2018-02-19T04:12:02.880Z] 04:12:02     INFO -  [GFX1-]: Receive IPC close with reason=AbnormalShutdown
[task 2018-02-19T04:12:02.894Z] 04:12:02     INFO -  Hit MOZ_CRASH(Aborting on channel error.) at /builds/worker/workspace/build/src/ipc/glue/MessageChannel.cpp:2534
[task 2018-02-19T04:12:02.895Z] 04:12:02     INFO -  #01: ???[/builds/worker/workspace/build/application/firefox/libxul.so +0xa3dfa7]
[task 2018-02-19T04:12:02.896Z] 04:12:02     INFO -  #02: ???[/builds/worker/workspace/build/application/firefox/libxul.so +0xa3e102]
[task 2018-02-19T04:12:02.896Z] 04:12:02     INFO -  #03: ???[/builds/worker/workspace/build/application/firefox/libxul.so +0xa1a25c]
[task 2018-02-19T04:12:02.897Z] 04:12:02     INFO -  [Child 4021, Chrome_ChildThread] WARNING: pipe error (3): Connection reset by peer: file /builds/worker/workspace/build/src/ipc/chromium/src/chrome/common/ipc_channel_posix.cc, line 353
[task 2018-02-19T04:12:02.899Z] 04:12:02     INFO -  Hit MOZ_CRASH(Aborting on channel error.) at /builds/worker/workspace/build/src/ipc/glue/MessageChannel.cpp:2534
Crash Signature: application crashed [@ nsHostResolver::CompleteLookup]
Crash Signature: application crashed [@ nsHostResolver::CompleteLookup] → [@ nsHostResolver::CompleteLookup] [@ nsHostResolver::CompleteLookup(nsHostRecord *,nsresult,mozilla::net::AddrInfo *,bool)]
Component: Firefox UI Tests → Networking: DNS
Product: Testing → Core
QA Contact: hskupin
Version: Version 3 → unspecified
Stack from crashing thread:

[task 2018-02-19T04:12:18.279Z] 04:12:18     INFO - Thread 52 (crashed)
[task 2018-02-19T04:12:18.281Z] 04:12:18     INFO -  0  libxul.so!nsHostResolver::CompleteLookup [nsHostResolver.cpp:d071f1a3ace473f5d5c292ae7a704da892165107 : 1489 + 0x16]
[task 2018-02-19T04:12:18.281Z] 04:12:18     INFO -     eip = 0xefac42a1   esp = 0xc9760170   ebp = 0xc9760268   ebx = 0xcaade860
[task 2018-02-19T04:12:18.282Z] 04:12:18     INFO -     esi = 0xcae0cc00   edi = 0xf54da000   eax = 0x00000000   ecx = 0xf7553864
[task 2018-02-19T04:12:18.283Z] 04:12:18     INFO -     edx = 0x00000000   efl = 0x00010286
[task 2018-02-19T04:12:18.284Z] 04:12:18     INFO -     Found by: given as instruction pointer in context
[task 2018-02-19T04:12:18.284Z] 04:12:18     INFO -  1  libxul.so!nsHostResolver::ThreadFunc [nsHostResolver.cpp:d071f1a3ace473f5d5c292ae7a704da892165107 : 1852 + 0x37]
[task 2018-02-19T04:12:18.285Z] 04:12:18     INFO -     eip = 0xefac38de   esp = 0xc9760270   ebp = 0xc9760318   ebx = 0xf54da000
[task 2018-02-19T04:12:18.286Z] 04:12:18     INFO -     esi = 0xc97602c8   edi = 0xf712f2f0
[task 2018-02-19T04:12:18.286Z] 04:12:18     INFO -     Found by: call frame info
[task 2018-02-19T04:12:18.287Z] 04:12:18     INFO -  2  libnspr4.so!_pt_root [ptthread.c:d071f1a3ace473f5d5c292ae7a704da892165107 : 201 + 0x7]
[task 2018-02-19T04:12:18.288Z] 04:12:18     INFO -     eip = 0xf7386fb0   esp = 0xc9760320   ebp = 0xc9760368   ebx = 0xf739a000
[task 2018-02-19T04:12:18.289Z] 04:12:18     INFO -     esi = 0xcae87580   edi = 0xc9760b40
[task 2018-02-19T04:12:18.290Z] 04:12:18     INFO -     Found by: call frame info
[task 2018-02-19T04:12:18.290Z] 04:12:18     INFO -  3  libpthread-2.23.so + 0x6295
[task 2018-02-19T04:12:18.291Z] 04:12:18     INFO -     eip = 0xf7754295   esp = 0xc9760370   ebp = 0xc9760428   ebx = 0x00000000
[task 2018-02-19T04:12:18.292Z] 04:12:18     INFO -     esi = 0x00000000   edi = 0x003d0f00
[task 2018-02-19T04:12:18.293Z] 04:12:18     INFO -     Found by: call frame info
[task 2018-02-19T04:12:18.293Z] 04:12:18     INFO -  4  libc-2.23.so + 0xe70ae
[task 2018-02-19T04:12:18.294Z] 04:12:18     INFO -     eip = 0xf74870ae   esp = 0xc9760430   ebp = 0x00000000
[task 2018-02-19T04:12:18.295Z] 04:12:18     INFO -     Found by: previous frame's frame pointer
[task 2018-02-19T04:12:18.296Z] 04:12:18     INFO -
Severity: normal → critical
Keywords: crash
Assignee: nobody → daniel
Priority: P5 → P1
Whiteboard: [necko-triaged][trr]
Comment on attachment 8952248 [details]
bug 1439302 - repair the *RESOLVEAGAIN logic in nsHostResolver::CompleteLookup

https://reviewboard.mozilla.org/r/221492/#review227324
Attachment #8952248 - Flags: review?(valentin.gosu) → review+
Pushed by daniel@haxx.se:
https://hg.mozilla.org/integration/autoland/rev/8fa7c8455f70
repair the *RESOLVEAGAIN logic in nsHostResolver::CompleteLookup r=valentin
https://hg.mozilla.org/mozilla-central/rev/8fa7c8455f70
Status: NEW → RESOLVED
Closed: 6 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla60
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: