bug 1439302 - repair the *RESOLVEAGAIN logic in nsHostResolver::CompleteLookup r=valentin

When the native resolve needs to run again, the rec->mResolving counter
must not be decreased, as otherwise it triggers an assert when the next
resolve completes.

MozReview-Commit-ID: 3UQGkDSOmGi